<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".addTransaction">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:backgroundTint="#BC0202"
            android:elevation="2dp"
            android:paddingHorizontal="16dp">

            <ImageButton
                android:id="@+id/backButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:backgroundTint="@android:color/transparent"
                app:srcCompat="@drawable/ic_action_back"
                app:tint="@color/black" />

            <TextView
                android:id="@+id/myTrack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/mytrack"
                android:textSize="24sp"
                android:textStyle="bold" />

            <androidx.cardview.widget.CardView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center|end"
                app:cardBackgroundColor="#00FFFFFF"
                app:cardCornerRadius="150dp"
                app:cardElevation="2dp">

                <ImageView
                    android:id="@+id/profileButton"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/profile" />
            </androidx.cardview.widget.CardView>

        </FrameLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_gravity="bottom"
            android:layout_marginVertical="4dp"
            android:background="#CCCCCC" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="16dp">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_transaction"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="2">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="111dp"
                        android:layout_height="wrap_content"
                        android:text="@string/date"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/editTextDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/select_date"
                        android:focusable="false"
                        android:clickable="true"
                        android:inputType="none"
                        tools:ignore="TextFields" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="111dp"
                        android:layout_height="wrap_content"
                        android:text="@string/type"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <RadioGroup
                        android:id="@+id/typeGroup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:id="@+id/incomeRadio"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/income" />

                        <RadioButton
                            android:id="@+id/expenseRadio"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/expense" />
                    </RadioGroup>

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="111dp"
                        android:layout_height="wrap_content"
                        android:text="@string/category"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <Spinner
                        android:id="@+id/category"
                        android:layout_width="match_parent"
                        android:layout_height="20dp" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="111dp"
                        android:layout_height="wrap_content"
                        android:text="@string/amount"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/amount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="number" />

                </TableRow>

            </TableLayout>

            <Button
                android:id="@+id/saveButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="12dp"
                android:backgroundTint="#B2EBF2"
                android:text="@string/save"
                android:textColor="#0097A7"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>